fixed alignment on Programs

--- a/_sass/_pages.scss
+++ b/_sass/_pages.scss
@@ -97,6 +97,9 @@
     padding-top: 100px;
     padding-bottom: 100px;
   }
+  .col {
+    justify-content: flex-start;
+  }
 }
 #programs-snippet {
   font-size: 1.4em;
